build/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-app
  namespace: mendix
spec:
  selector:
    matchLabels:
      app: test-app
  template:
    metadata:
      labels:
        app: test-app
    spec:
      containers:
      - name: test-app
        image: nginx
        resources:
