build/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/backend-protocol: "http"
  name: test-app-ingress
  namespace: default
  labels:
      app: "test-app"
spec:
  rules:
  - host: test-app.yahiakhedr.com
    http:
      paths:
      - backend:
          serviceName: test-app-service
          servicePort: 80
